WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95724
[EFL] Fix build error in NetworkStateNotifierEfl.cpp
https://bugs.webkit.org/show_bug.cgi?id=95724
Summary
[EFL] Fix build error in NetworkStateNotifierEfl.cpp
Chris Dumez
Reported
2012-09-04 03:14:09 PDT
People have reported the following build error when using Ubuntu 11.10: Source/WebCore/platform/network/efl/NetworkStateNotifierEfl.cpp:144:10: error: ‘struct sockaddr_nl’ has no member named ‘nl_family’ This builds just fine on Ubuntu 12.04 though. The reason for the compilation order is that on some systems, <sys/socket.h> must be included BEFORE <linux/netlink.h>. Unfortunately, this is against coding style (includes should be in alphabetical order) but I don't think we have a choice here.
Attachments
Patch
(1.58 KB, patch)
2012-09-04 03:16 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-09-04 03:16:42 PDT
Created
attachment 161998
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-04 03:19:01 PDT
Attachment 161998
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/network/efl/NetworkStateNotifierEfl.cpp:38: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 3
2012-09-04 03:21:49 PDT
The style error is expected. We have to code against style here to include headers in a specific order.
WebKit Review Bot
Comment 4
2012-09-04 04:24:50 PDT
Comment on
attachment 161998
[details]
Patch Clearing flags on attachment: 161998 Committed
r127455
: <
http://trac.webkit.org/changeset/127455
>
WebKit Review Bot
Comment 5
2012-09-04 04:24:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug